--- a/C4 CSS/Proyecto-Grover/index.css
+++ b/C4 CSS/Proyecto-Grover/index.css
@@ -1,17 +1,50 @@
+body {
+    font-family: 'Arial', sans-serif;
+    background-color: #bcf2c2;
+    color: #333;
+    margin: 20px;
+  }
+
 #Home {
     width: 50;
     color: red;
 }
 
-
-nav ul li{
-    color: black;
-    font-size: 50px;
+h2 {
+    color: red;
 }
 
-h1{
-    color: red;
-    font-size: 40px;
+
+
+
+.nav li{
+    list-style: none;
+    text-align: right;
+    padding: 0%;
+    margin: 0;
+
+}
+
+.nav li{
+    display: inline-block;
+}
+
+.nav a{
+    text-decoration: none;
+}
+
+/*Colocar una imagen al lado de otra*/
+.contenedor{
+    display:contents;
+}
+.orange{
+    width: auto;
+    object-fit: cover;
+}
+.chef{
+    width: auto;
+    height: 100;
+    object-fit: cover;
 }
 
 /* Se usa # para formatear elementos DOM por ID */
